test_scripts/errors/mismatched_braces.stderr
Parse Error:
 1 | { let x = 1; ]
                  ^
Error: Brace { does not match ]
Failed to parse script
